# rustconnection

./: Cargo.toml
client/: Cargo.toml
client/src/: core.rs  main.rs
server/src/: core.rs  gen.rs  main.rs  menu.rs  util.rs
src/: client.rs
util/: Cargo.toml
util/src/: lib.rs
